<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="author" translatable="false">Нетология. Университет Интернет профессий</string>
    <string name="data" translatable="false">21 мая в 18:36</string>
    <string name="mainText" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растем сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но главное остается с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен - http://netolo.gy/fyb</string>
    <string name="_22" translatable="false">22</string>
    <string name="_5" translatable="false">5</string>
    <string name="_30" translatable="false">30</string>
    <string name="_0" translatable="false">0</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="post_text">Post Text</string>
    <string name="chooser_share_post">Share Post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="ok">OK</string>
    <string name="description_post_save">Save</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">User %1$s added %2$s\'s post</string>
    <string name="empty_post" translatable="false">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_text" translatable="false">Something went wrong</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="new_posts">New posts</string>
    <string name="save">Save</string>
    <string name="photo">Photo</string>
    <string name="select_photo">Select photo</string>
    <string name="take_photo">Take photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="authorization">Authorization</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enterToContinue">Enter to continue</string>
    <string name="cancel">Cancel</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="stay_here">Stay here</string>

</resources>